--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Spectral:wght@200&display=swap" rel="stylesheet">
-<title>Free Fire (Manual)</title>
+<title>Free Fire Manual </title>
 <style>
   .putih{
     width:100%;
