--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </br></br></br>
 <!---BAGIAN 1--->
 <div class="putih">
-  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">20 Diamond</a></br><a class="text2">🟢 Open </a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-20💎-649895"><button class="button" style="width:16.5%;height:28px;"><span>
+  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">20 Diamond</a></br><a class="text2">🟢 Rp2.700 </a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-20💎-649895"><button class="button" style="width:16.5%;height:28px;"><span>
   BELI
 </span></button></a></td></table></div>  
 
