--- a/index.html
+++ b/index.html
@@ -70,85 +70,85 @@
 
 <!---BAGIAN 2--->
 <div class="putih">
-  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">50 Diamond</a></br><a class="text2">🟢 Open</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-50💎-649897"><button class="button" style="width:16.5%;height:28px;"><span>
+  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">50 Diamond</a></br><a class="text2">🟢 Rp6.480</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-50💎-649897"><button class="button" style="width:16.5%;height:28px;"><span>
   BELI
 </span></button></a></td></table></div>
 
 <!---BAGIAN 3--->
 <div class="putih">
-  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">70 Diamond</a></br><a class="text2">🟢 Open </a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-70💎-271569"><button class="button" style="width:16.5%;height:28px;"><span>
+  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">70 Diamond</a></br><a class="text2">🟢 Rp8.910</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-70💎-271569"><button class="button" style="width:16.5%;height:28px;"><span>
   BELI
 </span></button></a></td></table></div>
 
 <!---BAGIAN 4--->
 <div class="putih">
-  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">100 Diamond</a></br><a class="text2">🟢 Open</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-100💎-271576"><button class="button" style="width:16.5%;height:28px;"><span>
+  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">100 Diamond</a></br><a class="text2">🟢 Rp12.960</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-100💎-271576"><button class="button" style="width:16.5%;height:28px;"><span>
   BELI
 </span></button></a></td></table></div>
 
 <!---BAGIAN 4--->
 <div class="putih">
-  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">140 Diamond</a></br><a class="text2">🟢 Open</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-140💎-271578"><button class="button" style="width:16.5%;height:28px;"><span>
+  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">140 Diamond</a></br><a class="text2">🟢 Rp17.820</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-140💎-271578"><button class="button" style="width:16.5%;height:28px;"><span>
   BELI
 </span></button></a></td></table></div>
 
 <!---BAGIAN 5--->
 <div class="putih">
-  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">210 Diamond</a></br><a class="text2">🟢 Open</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-210💎-271585"><button class="button" style="width:16.5%;height:28px;"><span>
+  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">210 Diamond</a></br><a class="text2">🟢 Rp26.730</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-210💎-271585"><button class="button" style="width:16.5%;height:28px;"><span>
   BELI
 </span></button></a></td></table></div>
 
  <!---BAGIAN 6--->
 <div class="putih">
-  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">355 Diamond</a></br><a class="text2">🟢 Open </a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-355💎-271587"><button class="button" style="width:16.5%;height:28px;"><span>
+  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">355 Diamond</a></br><a class="text2">🟢 Rp44.550</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-355💎-271587"><button class="button" style="width:16.5%;height:28px;"><span>
   BELI
 </span></button></a></td></table></div>
 
 <!---BAGIAN 7--->
 <div class="putih">
-  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">425 Diamond</a></br><a class="text2">🟢 Open </a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-425💎-383661"><button class="button" style="width:16.5%;height:28px;"><span>
+  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">425 Diamond</a></br><a class="text2">🟢 Rp53.460</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-425💎-383661"><button class="button" style="width:16.5%;height:28px;"><span>
   BELI
 </span></button></a></td></table></div>
 
 <!---BAGIAN 8--->
 <div class="putih">
-  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">500 Diamond</a></br><a class="text2">🟢 Open</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-500💎-271594"><button class="button" style="width:16.5%;height:28px;"><span>
+  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">500 Diamond</a></br><a class="text2">🟢 Rp63.180</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-500💎-271594"><button class="button" style="width:16.5%;height:28px;"><span>
   BELI
 </span></button></a></td></table></div>
 
 <!---BAGIAN 9--->
 <div class="putih">
-  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">720 Diamond</a></br><a class="text2">🟢 Open </a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-720💎-271599"><button class="button" style="width:16.5%;height:28px;"><span>
+  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">720 Diamond</a></br><a class="text2">🟢 Rp89.100</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-720💎-271599"><button class="button" style="width:16.5%;height:28px;"><span>
   BELI
 </span></button></a></td></table></div>
 
 <!---BAGIAN 10--->
 <div class="putih">
-  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">860 Diamond</a></br><a class="text2">🟢 Open</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-860💎-271606"><button class="button" style="width:16.5%;height:28px;"><span>
+  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">860 Diamond</a></br><a class="text2">🟢 Rp106.920</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-860💎-271606"><button class="button" style="width:16.5%;height:28px;"><span>
   BELI
 </span></button></a></td></table></div>
 
 <!---BAGIAN 11--->
 <div class="putih">
-  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">1000 Diamond</a></br><a class="text2">🟢 Open</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-1000💎-271609"><button class="button" style="width:16.5%;height:28px;"><span>
+  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">1000 Diamond</a></br><a class="text2">🟢 Rp124.740</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-1000💎-271609"><button class="button" style="width:16.5%;height:28px;"><span>
   BELI
 </span></button></a></td></table></div>
 
 <!---BAGIAN 12--->
 <div class="putih">
-  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">2000 Diamond</a></br><a class="text2">🟢 Open</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-2000-285853"><button class="button" style="width:16.5%;height:28px;"><span>
+  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">2000 Diamond</a></br><a class="text2">🟢 Rp243.000</a><a href="https://sptrshop.webtoko.net/produk?Free-Fire-2000-285853"><button class="button" style="width:16.5%;height:28px;"><span>
   BELI
 </span></button></a></td></table></div>
 
 <!---BAGIAN 13--->
 <div class="putih">
-  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">Membership Mingguan</a></br><a class="text2">🟢 Open</a><a href="https://sptrshop.webtoko.net/produk?Membership-Mingguan-Free-Fire-271611"><button class="button" style="width:16.5%;height:28px;"><span>
+  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">Membership Mingguan</a></br><a class="text2">🟢 Rp27.000</a><a href="https://sptrshop.webtoko.net/produk?Membership-Mingguan-Free-Fire-271611"><button class="button" style="width:16.5%;height:28px;"><span>
   BELI
 </span></button></a></td></table></div>
 
 <!---BAGIAN 14--->
 <div class="putih">
-  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">Membership Bulanan</a></br><a class="text2">🟢 Open</a><a href="https://sptrshop.webtoko.net/produk?Membership-Bulanan-Free-Fire-271617"><button class="button" style="width:16.5%;height:28px;"><span>
+  <img src="https://i.ibb.co/4VjH9hc/fff.png" style="border-radius:10px;width:50px;margin-top:0.5%;margin-left:5px"></style><a class="text1">Membership Bulanan</a></br><a class="text2">🟢 Rp135.000</a><a href="https://sptrshop.webtoko.net/produk?Membership-Bulanan-Free-Fire-271617"><button class="button" style="width:16.5%;height:28px;"><span>
   BELI
 </span></button></a></td></table></div>
 
